--- a/requirements.txt
+++ b/requirements.txt
@@ -25,12 +25,12 @@ propcache==0.4.1
 psutil==7.1.3
 pydantic==2.12.5
 pydantic_core==2.41.5
-pyquoks==2.1.2
+pyquoks==2.2.1.1
 requests==2.32.5
-schedule_parser @ git+https://github.com/diquoks/ScheduleParser.git@master
+schedule_parser @ git+https://github.com/diquoks/ScheduleParser.git@4a5697d2c281f085be2613e543f3f491b80990da
 typing-inspection==0.4.2
 typing_extensions==4.15.0
-urllib3==2.6.0
+urllib3==2.6.2
 waitress==3.0.2
 Werkzeug==3.1.4
 yarl==1.22.0
